--- a/src/main/resources/junit.properties
+++ b/src/main/resources/junit.properties
@@ -1,5 +1,5 @@
 jdbc.driver = org.postgresql.Driver
-jdbc.url = jdbc:postgresql://localhost:5432/junitS
+jdbc.url = jdbc:postgresql://localhost:5432/basic
 jdbc.username = postgres
 jdbc.password = postgres
 
