--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>cz.cvut.basic</groupId>
-    <artifactId>cz.cvut.basic</artifactId>
+    <artifactId>cz.cvut.wa2</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
     <name>basic</name>
